rpmplint: trust osbuild-composer repository
Git v2.35.2 brought some security fixes which prevents interaction with
repository if it's not owned by the user who cloned it. More info here:
https://github.blog/2022-04-12-git-security-vulnerability-announced/

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -132,7 +132,9 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Create SRPM
-        run: make srpm
+        run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          make srpm
 
       - name: Run rpmlint
         run: rpmlint rpmbuild/SRPMS/*
